[package]
name = "bevypoco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18"
bevy_editor_pls = "0.4"
bevy_mod_debugdump = "0.7"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1
